<resources>
    <string name="app_name">MessageShareApp</string>
    <string name="show_toast">Show Toast</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="send_data">Send Data</string>
    <string name="share_to_other_apps">Share to other apps</string>
    <string name="textview">TextView</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="title">Title</string>
    <string name="cool_stuff_yo">cool stuff yo</string>
</resources>